# suricata-language-server

./: .commitlintrc.yaml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .vscodeignore  =1.0.0  CLAUDE.md  MIGRATION_SUMMARY.md  README.md  README.rst  SEMANTIC_COMMITS.md  flake.nix  package.json  pyproject.toml  setup.cfg  setup.py  test_complete_workflow.py  test_idle_analysis.py  test_idle_timer.py  test_refresh_diagnostics.py  test_sid_conflicts.py  test_workspace_integration.py  test_workspace_sid_conflicts.py  tsconfig.json
.github/workflows/: container-mode-test.yml  pylint.yml  python-package.yml  python-unittests.yml
client/: LICENSE  overview.md  package.json  tsconfig.json
client/src/: extension.ts
data/: suricata-keywords.md
scripts/: build_suricata_keywords_csv.sh  build_with_version_md.py
scripts/keywords/: suricata-keywords-v4.1.10.csv  suricata-keywords-v4.1.5.csv  suricata-keywords-v4.1.6.csv  suricata-keywords-v4.1.7.csv  suricata-keywords-v4.1.8.csv  suricata-keywords-v4.1.9.csv  suricata-keywords-v5.0.0.csv  suricata-keywords-v5.0.1.csv  suricata-keywords-v5.0.10.csv  suricata-keywords-v5.0.3.csv  suricata-keywords-v5.0.4.csv  suricata-keywords-v5.0.5.csv  suricata-keywords-v5.0.6.csv  suricata-keywords-v5.0.7.csv  suricata-keywords-v5.0.8.csv  suricata-keywords-v5.0.9.csv  suricata-keywords-v6.0.0.csv  suricata-keywords-v6.0.1.csv  suricata-keywords-v6.0.10.csv  suricata-keywords-v6.0.11.csv  suricata-keywords-v6.0.12.csv  suricata-keywords-v6.0.13.csv  suricata-keywords-v6.0.14.csv  suricata-keywords-v6.0.15.csv  suricata-keywords-v6.0.16.csv  suricata-keywords-v6.0.18.csv  suricata-keywords-v6.0.19.csv  suricata-keywords-v6.0.2.csv  suricata-keywords-v6.0.20.csv  suricata-keywords-v6.0.3.csv  suricata-keywords-v6.0.4.csv  (+16 more)
suricatals/: __init__.py  jsonrpc.py  langserver.py  lsp_helpers.py  parse_signatures.py  tests_rules.py  unit_tests.py
tests/: clean.rules  conflict-file1.rules  conflict-file2.rules  datajson.rules  datasets.rules  dump.lua  empty_sticky.rules  fail-http.rules  fast-pattern-analysis.rules  high_entropy_domains.rules  invalid-http-host.rules  invalid-multiline.rules  lua.rules  missing-incomplete.rules  pattern-syntax.rules  pcap-absolute.rules  pcap-relative.rules  pcap.rules  pcap_absent.rules  sig-shadow.rules  test_complete_workflow.py  test_sid_conflicts.py
(+46 files in other folders)
