[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "suricata-language-server"
version = "1.3.1"
authors = [
  { name="Eric Leblond", email="el@stamus-networks.com" },
  { name="Nicolas Frisoni", email="nfrisoni@stamus-networks.com" },
]
maintainers = [
  { name="Eric Leblond", email="el@stamus-networks.com" },
]
description = "Language Server Protocol for Suricata signatures"
readme = "README.md"
requires-python = ">=3.7"
license-files = [ "LICENSE" ]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
keywords = [
    "suricata",
    "language-server-protocol",
    "lsp",
    "signature",
    "ids",
    "ips",
]
dependencies = [
    "docker>=7.1.0",
]

[project.urls]
Homepage = "https://www.stamus-networks.com/suricata-language-server"
Issues = "https://github.com/StamusNetworks/suricata-language-server/issues"
Repository = "https://github.com/StamusNetworks/suricata-language-server.git"

[project.scripts]
suricata-language-server = "suricatals.__init__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
suricatals = ["data/*.json"]
