[metadata]
name = suricata-language-server
version = 0.5.1
description = Suricata Signatures Language Server for the Language Server Protocol
long_description = file: README.rst
license = GNU General Public License v3
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Development Status :: 4 - Beta
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Topic :: Security

author = Eric Leblond
author_email = el@stamus-networks.com
url = https://github.com/StamusNetworks/suricata-language-server

[options]
zip_safe = True
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    suricata-language-server = suricatals.__init__:main

[options.package_data]
* = *.rst
